Fix styling issue with expand icons on mobile devices

--- a/public/styles/core.less
+++ b/public/styles/core.less
@@ -120,6 +120,7 @@ body {
 
 								.core-sub-menu-link-expand {
 									position: absolute;
+									top: 0;
 									right: 0;
 									line-height: @base-font-size * 2.5;
 								}
